--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "fakerphp/faker": "^1.9.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
+        "nunomaduro/larastan": "^0.6.9",
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
